--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "assemble-contrib-sitemap": "*",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-autoprefixer": "~0.7.3",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0"
   },
   "keywords": []
 }
