--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "jquery": "~2.1.1",
-    "reveal.js": "~2.6.2"
+    "reveal.js": "~2.6.2",
+    "headjs": "~1.0.3"
   }
 }
