--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-contrib-sass": "~0.7.3",
     "grunt-autoprefixer": "~0.7.3",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0"
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-gh-pages": "~0.9.1"
   },
   "keywords": []
 }
