--- a/src/data/site.yml
+++ b/src/data/site.yml
@@ -1,3 +1,3 @@
-title: Things I've Learned From Sass Plugins
+title: 10 Things I've Learned From Sass Plugins
 author: Elise Chant
 DIR_IMAGES: "assets/images"
